--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.XPNS">
-        <activity
-            android:name=".profileActivity"
-            android:exported="true" />
+        <activity android:name=".profileActivity"  android:exported="true" />
         <activity android:name=".register" />
         <activity android:name=".login" />
+        <activity android:name=".add_expense"></activity>
+        <activity android:name=".dashboard" />
         <activity
             android:name=".home"
             android:label="Home" />
