--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.xpns">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -12,10 +12,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.XPNS">
-        <activity android:name=".profileActivity"  android:exported="true" />
+        <activity
+            android:name=".expenses"
+            android:exported="false" />
+        <activity
+            android:name=".profileActivity"
+            android:exported="true" />
         <activity android:name=".register" />
         <activity android:name=".login" />
-        <activity android:name=".add_expense"></activity>
+        <activity android:name=".add_expense" />
         <activity android:name=".dashboard" />
         <activity
             android:name=".home"
