--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.XPNS">
         <activity
+            android:name=".past_expenses"
+            android:exported="false" />
+        <activity
             android:name=".creatGroup"
             android:exported="false" />
         <activity
             android:name=".groups"
-            android:exported="false" />
-        <activity
-            android:name=".pastExpenses"
             android:exported="false" />
         <activity
             android:name=".split_expense"
